mise a jour avant la soutenance
