# src/main/java/com/bossoh/gmsscbackend/entities/UtilisateurGroupeIntervenant.java
@@ -1,26 +1,0 @@
-package com.bossoh.gmsscbackend.entities;
-
-import com.fasterxml.jackson.annotation.JsonIdentityInfo;
-import com.fasterxml.jackson.annotation.ObjectIdGenerators;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-
-import javax.persistence.Entity;
-import javax.persistence.ManyToOne;
-import java.time.LocalDate;
-
-@JsonIdentityInfo(generator = ObjectIdGenerators.PropertyGenerator.class, property = "id")
-@Entity
-@Getter
-@Setter
-@AllArgsConstructor
-@NoArgsConstructor
-public class UtilisateurGroupeIntervenant extends AbstractEntity {
-    private LocalDate dateAffectionUser;
-    @ManyToOne
-    private GroupeIntervenant groupeIntervenant;
-    @ManyToOne
-    private Utilisateur utilisateur;
-}
